Update on footer to prevent overflow

--- a/styles/search-home-styles.css
+++ b/styles/search-home-styles.css
@@ -18,10 +18,9 @@
   overflow: hidden;
 }
 
-
 .nav-bar li, .foot-bar li {
   display: inline;
-  padding: 5px;
+  padding: 8px;
 }
 
 .nav-bar li a, .foot-bar li a {
@@ -29,25 +28,31 @@
   vertical-align: middle;
   text-decoration: none;
   font-family: "Open Sans";
-  font-size: small;
   color: #666;
 }
 
 .left-nav, .left-footer {
   float: left;
+}
+
+.left-nav, .right-nav {
   display: flex;
 }
 
 .right-nav, .right-footer {
   float: right;
-  display: flex;
 }
 
-#notify-icon {
+.icon {
+  display: table-cell;
   border-radius: 50%;
+  
+  height: 30px;
+  width: 30px;
 }
 
 #bwa-id {
+  display: table-cell;
   border-radius: 50%;
   background-color: whitesmoke;
 }
@@ -134,14 +139,15 @@
 .footer {
   height: 40px;
   width: 100%;
-  margin: auto;
   margin-top: 40px;
+  padding: 5px 0;
   list-style-type: none;
-  overflow: hidden;
+  overflow: auto;
   border-top: 1px solid #e4e4e4;
   background-color: #f2f2f2;
   position: absolute;
   bottom: 0;
+  min-width: 100%;
 }
 
 
